src/tests/testfiles/binary-operators/6.txt
testfiles/binary-operators/6.c:2:9: error: invalid operands to comparison '<=' (have 'char *' and 'char')
"a" <= 'a';
    ^
